kubernetes/apps/devtools/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  hostnames:
    # yaml-language-server-disable
    - git.${SECRET_DOMAIN}
    # yaml-language-server-disable
    - forgejo.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Real-Ip
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
      timeouts:
        request: 300s
